Paginas listas / falta media queries

--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -20,13 +20,13 @@
     <nav class="menu">
       <ul>
           <li class="dropdown">
-              <a class="catalogo-button" href="../creatividad/index.html">Catálogo</a>
+              <a class="catalogo-button" href="../catalogo/index.html">Catálogo</a>
               <ul class="sub-menu">
-                  <li><a href="#">Cuadernos</a></li>
-                  <li><a href="../creatividad/index.html">Creatividad</a></li>
-                  <li><a href="#">Herramientas</a></li>
-                  <li><a href="#">Lápices</a></li>
-                  <li><a href="#">Papelería</a></li>
+                  <li><a href="../catalogo/index.html">Cuadernos</a></li>
+                  <li><a href="../catalogo/index.html">Creatividad</a></li>
+                  <li><a href="../catalogo/index.html">Herramientas</a></li>
+                  <li><a href="../catalogo/index.html">Lápices</a></li>
+                  <li><a href="../catalogo/index.html">Papelería</a></li>
               </ul>
           </li>
           <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
@@ -34,7 +34,7 @@
       </ul>
     </nav>
 </header>
-<body>¿
+<body>
     <div class="breadcrames">
         <a href="../home/index.html" class="breadcrames_text">Home/</a>
         <a href="#" class="breadcrames_text">Catálogo/</a>
@@ -44,7 +44,7 @@
     <div class="grilla">
         <div id="catalogo_lateral">
             <div class="categorias">Cuadernos</div> 
-                <div class="secciones">Ver todo</div>
+                <div class="secciones">Ver todo </div>
                 <div class="secciones">College</div>
                 <div class="secciones">Universitarios</div>
                 <div class="secciones">Croqueras</div>
@@ -73,109 +73,108 @@
                 <div class="secciones">Otros</div>
         </div>
         <ul class="galeria_productos">
+            <span class="breadcrame_catalogo">Creatividad > Ver todo</span>
             <section class="cr">
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/pintura/cr-pintura1.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item">
-                    <img src="../images/productos/creatividad/pintura/cr-pintura2.png" alt="Tempera por unidad Proarte" width="150" heigth="150" loading="lazy">
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/pintura/cr-pintura1.png" alt="Témpera 12 unidades Proarte" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Caja de témperas Proarte<br> $2000</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/pintura/cr-pintura3.png" alt="Acuarela 12 colores Pentel" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Acuarela 12 colores Pentel<br> $1490</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/pintura/cr-pintura2.png" alt="Témpera por unidad Proarte" width="100%" heigth="100%" loading="lazy">
                     <span class="precio_producto">Frasco témpera Proarte 100ml<br> $1490</span>
-                </li>
-                <li class="galeria_item">
-                    <img src="../images/productos/creatividad/pintura/cr-pintura3.png" alt="Acuarela 12 colores Pentel" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Acuarela 12 colores Pentel<br> $0000</span>
-                </li>
-                <li class="galeria_item">
-                    <img src="../images/productos/creatividad/pintura/cr-pintura4.png" alt="Pintura por unidad para vidrio" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Frasco de pintura para vidrio<br> $0000</span>
-                </li>
-                <li class="galeria_item">
-                    <img src="../images/productos/creatividad/pintura/cr-pintura5.png" alt="Tinta china por unidad" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Frasco tinta china<br> $0000</span>
-                </li>
-            </section>
-            <section class="cr">
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion1.jpg" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion2.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion3.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion4.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion5.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion6.jpeg" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion7.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion8.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion9.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion10.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion11.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion12.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion13.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
-                <li class="galeria_item"></li>
-                    <img src="../images/productos/creatividad/decoracion/cr-decoracion14.png" alt="Témpera 12 unidades Proarte" width="150" heigth="150" loading="lazy">
-                    <span class="precio_producto">Caja de témperas Proarte<br> $0000</span>
-                </li>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/pintura/cr-pintura4.png" alt="Pintura por unidad para vidrio" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Frasco de pintura para vidrio<br> $1890</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/pintura/cr-pintura5.png" alt="Tinta china por unidad" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Frasco tinta china<br> $1290</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion1.jpg" alt="Bolsa de palos de helados de colores" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Palos de helado colores<br> $600</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion2.png" alt="Bolsa de pelotas de plumavit pequeñas" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Pelotas plumavit pequeñas<br> $1700</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion3.png" alt="Bolsa de pompones de colores" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Pompóm de colores<br> $1350</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion4.png" alt="Set de stickers" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Set de stickers<br> $1490</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion5.png" alt="Set de ojos locos decorativos" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Ojos locos<br> $990</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion6.jpeg" alt="Set de perros para colgar ropa" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Perros de ropa<br> $990</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion7.png" alt="Set de bombillas" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Set de bombillas<br> $650</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion8.png" alt="Corchos pequeños" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Corchos pequeños<br> $330</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion9.png" alt="Set de botones decorativos de colores" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Set botones decorativos<br> $1290</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img src="../images/productos/creatividad/decoracion/cr-decoracion10.png" alt="Bolsa de palos de maqueta 6x6" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Palos de maqueta 6x6<br> $1300</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion11.png" alt="Bolsa de limpia pipas de colores" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Limpia pipas colores<br> $1250</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion12.png" alt="Bolsa de escarcha por unidad" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Bolsa de escarcha (x unidad)<br> $150</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion13.png" alt="Bolsa de lentejuelas por unidad" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Bolsa de lentejuelas (x unidad)<br> $150</span>
+                </a>
+                <a class="galeria_item" href="../producto/index.html">
+                    <img class="imagen_producto" src="../images/productos/creatividad/decoracion/cr-decoracion14.png" alt="Témpera 12 unidades Proarte" width="100%" heigth="100%" loading="lazy">
+                    <span class="precio_producto">Mantel rectangular<br> $1490</span>
+                </a>
             </section>
         </ul>
     </div>
 </body>
 <span class="pre_footer">.</span>
 <footer>
-    <div class="contacto_footer">
-        <a class="boton_footer" href="https://www.google.com/maps/place/R%C3%ADo+Loncomilla+38,+Vi%C3%B1a+del+Mar,+Valpara%C3%ADso/@-33.0309193,-71.4976202,17z/data=!4m5!3m4!1s0x9689debc6bc8f1e3:0x299ac96ad8415c23!8m2!3d-33.0305955!4d-71.4960967?entry=ttu">
-          <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
-        </a>
-        <a class="boton_footer">
-          <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer" href="#">+56983726539</div>
-        </a>
-        <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
-          <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer">r.gonzalescortes777@gmail.com</div>
-        </a>
-        <a class="boton_footer" href="https://web.facebook.com/LibreriaTiaRuth">
-          <i class="fa-brands fa-facebook fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer">Librería Tia Ruth</div>
-        </a>
-    </div>
+  <div class="contacto_footer">
+      <a class="boton_footer" href="https://www.google.com/maps/place/R%C3%ADo+Loncomilla+38,+Vi%C3%B1a+del+Mar,+Valpara%C3%ADso/@-33.0309193,-71.4976202,17z/data=!4m5!3m4!1s0x9689debc6bc8f1e3:0x299ac96ad8415c23!8m2!3d-33.0305955!4d-71.4960967?entry=ttu">
+        <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
+        <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
+      </a>
+      <a class="boton_footer">
+        <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
+        <div class="texto_footer" href="#">+56983726539</div>
+      </a>
+      <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
+        <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
+        <div class="texto_footer">r.gonzalescortes777@gmail.com</div>
+      </a>
+      <a class="boton_footer" href="https://web.facebook.com/LibreriaTiaRuth">
+        <i class="fa-brands fa-facebook fa-2x" style="color: #ffffff;"></i>
+        <div class="texto_footer">Librería Tia Ruth</div>
+      </a>
+  </div>
 </footer>
 
 
