--- a/cotiza tu lista/index.html
+++ b/cotiza tu lista/index.html
@@ -22,10 +22,10 @@
   <nav class="menu">
     <ul>
         <li class="dropdown">
-            <a class="catalogo-button" href="../creatividad/index.html">Catálogo</a>
+            <a class="catalogo-button" href="../catalogo/index.html">Catálogo</a>
             <ul class="sub-menu">
               <li><a href="#">Cuadernos</a></li>
-              <li><a href="../creatividad/index.html">Creatividad</a></li>
+              <li><a href="#">Creatividad</a></li>
               <li><a href="#">Herramientas</a></li>
               <li><a href="#">Lápices</a></li>
               <li><a href="#">Papelería</a></li>
