--- a/home/index.html
+++ b/home/index.html
@@ -20,14 +20,13 @@
   </div>
   <nav class="menu">
     <ul>
-        <li class="dropdown">
-            <a class="catalogo-button" href="../catalogo/index.html">Catálogo</a>
+        <li class="dropdown"><a href="../catalogo/index.html">Catálogo</a>
             <ul class="sub-menu">
-              <li><a href="#">Cuadernos</a></li>
-              <li><a href="#">Creatividad</a></li>
-              <li><a href="#">Herramientas</a></li>
-              <li><a href="#">Lápices</a></li>
-              <li><a href="#">Papelería</a></li>
+              <li><a href="../catalogo/index.html">Cuadernos</a></li>
+              <li><a href="../catalogo/index.html">Creatividad</a></li>
+              <li><a href="../catalogo/index.html">Herramientas</a></li>
+              <li><a href="../catalogo/index.html">Lápices</a></li>
+              <li><a href="../catalogo/index.html">Papelería</a></li>
             </ul>
         </li>
         <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
@@ -44,34 +43,34 @@
 <section>
     <div class="galeria">
       <ul class="galeria_ofertas">
-        <li class="galeria_fotos">
+        <a class="galeria_fotos"  href="../producto/index.html">
           <img src="../images/productos/herramientas/tijeras y cuchillos/he-tijeras1.png" alt="Cuadernos universitarios Torre" height="200px" width="200px">
           <span class="nombre_oferta">Tijera proarte</span>
           <div class="precios">
             <span style="text-decoration: line-through;">$1100</span><span>/$900</span>
           </div>
-        </li>
-        <li class="galeria_fotos">
+        </a>
+        <a class="galeria_fotos"  href="../producto/index.html">
           <img src="../images/productos/creatividad/decoracion/cr-decoracion1.jpg" alt="Scotch ancho" height="200px" width="200px">
           <span class="nombre_oferta">Palos de helado colores</span>
           <div class="precios">
             <span style="text-decoration: line-through;">$890</span><span>/$600</span>
           </div>
-        </li>
-        <li class="galeria_fotos">
+        </a>
+        <a class="galeria_fotos"  href="../producto/index.html">
           <img src="../images/productos/herramientas/pegamentos/he-pegamentos3.png" alt="Caja de temperas glitter" height="200px" width="200px">
           <span class="nombre_oferta">Scotch grueso</span>
           <div class="precios">
             <span style="text-decoration: line-through;">$890</span><span>/$600</span>
           </div>
-        </li>
-        <li class="galeria_fotos">
+        </a>
+        <a class="galeria_fotos"  href="../producto/index.html">
           <img src="../images/productos/creatividad/pintura/cr-pintura1.png" alt="Lápices de colores Torre" height="200px" width="200px">
           <span class="nombre_oferta">Témperas 12 colores</span>
           <div class="precios">
             <span style="text-decoration: line-through;">$2500</span><span>/$2000</span>
           </div>
-        </li>
+        </a>
       </ul>
     </div>
 </section>
