--- a/producto/index.html
+++ b/producto/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Librería Tia Ruth</title>
+    <title>Producto</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,15 +42,18 @@
         <a href="#" class="breadcrames_actual">Producto/</a>
     </div>
     <section class="producto">
-        <img src="../images/productos/creatividad/decoracion/cr-decoracion1.jpg" alt="Palos de helado de colores Artel" loading="lazy" width="400px" height="400px">
-        <div class="titulo_producto">Palos de helado colores<br> $0000</div>
+        <img src="../images/productos/creatividad/pintura/cr-pintura1.png" alt="Palos de helado de colores Artel" loading="lazy" width="400px" height="400px">
+        <div class="titulo_producto">Caja de témpera Proarte<br>
+            <span style="text-decoration: line-through;">$2500</span><span>/$2000</span>
+        </div>
     </section>
     <section class="comprar">
         <a href="#" class="boton_comprar">Comprar</a>
+        <span class="boton_cantidad"><a class="masmenos">-</a><a class="numero">1</a><a class="masmenos">+</a></span>
     </section>
     <section class="descripcion_producto">
         <h2>Descripción</h2>
-        <p>Pack de helados Artel de colores.<br>Contenido: 25 unidades. <br>Se recomienda la supervición de un adulto para niños menores de 3 años.</p>
+        <p>Caja de témperas 12 frascos de 15 cc<br> Artículo escolar ideal para la enseñanza de las artes plásticas. <br>Se recomienda la supervición de un adulto.</p>
     </section>
 
 </body>
