--- a/contacto/index.html
+++ b/contacto/index.html
@@ -21,13 +21,13 @@
   <nav class="menu">
     <ul>
         <li class="dropdown">
-            <a class="catalogo-button" href="../creatividad/index.html">Catálogo</a>
+            <a class="catalogo-button" href="../catalogo/index.html">Catálogo</a>
             <ul class="sub-menu">
-                <li><a href="#">Cuadernos</a></li>
-                <li><a href="../creatividad/index.html">Creatividad</a></li>
-                <li><a href="#">Herramientas</a></li>
-                <li><a href="#">Lápices</a></li>
-                <li><a href="#">Papelería</a></li>
+                <li><a href="../catalogo/index.html">Cuadernos</a></li>
+                <li><a href="../catalogo/index.html">Creatividad</a></li>
+                <li><a href="../catalogo/index.html">Herramientas</a></li>
+                <li><a href="../catalogo/index.html">Lápices</a></li>
+                <li><a href="../catalogo/index.html">Papelería</a></li>
             </ul>
         </li>
         <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
