--- a/contacto/index.html
+++ b/contacto/index.html
@@ -42,12 +42,14 @@
 <body>
     <h1 class="titulos">Contacto</h1>
     <section class="cuerpo_contacto">
-        <div class="texto_contacto">Me encuentras en Río Loncomilla 38, El Olivar. Viña del Mar. </div>
-        <div class="texto_contacto">Puedes contactarme vía telefonica y por mensajes a través de la aplicación Whatsapp</div>
-        <div class="texto_contacto">Y si lo prefieres puedes mandarme un correo electrónico, mi correo es r.gonzalescortes777@gmail.com</div>
-            <a href="#" class="boton_contacto">Llámame</a>
-            <a href="#" class="boton_contacto">Envíame un Whatsapp</a>
-            <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF" class="boton_contacto">Mándame un correo</a>
+      <div class="texto_contacto">Me encuentras en Río Loncomilla 38, El Olivar. Viña del Mar. </div>
+      <div class="texto_contacto">Puedes contactarme vía telefonica y por mensajes a través de la aplicación Whatsapp</div>
+      <div class="texto_contacto">Y si lo prefieres puedes mandarme un correo electrónico, mi correo es r.gonzalescortes777@gmail.com</div>
+    </section>
+    <section  class="botones_contacto">
+      <a href="tel:983726539" class="boton_contacto">Llámame</a>
+      <a href="https://wa.me/983726539" class="boton_contacto" >Envíame un Whatsapp</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF" class="boton_contacto">Mándame un correo</a>
     </section>
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d560.8308281510734!2d-71.49620103960787!3d-33.0306870008436!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689debc6bc8f1e3%3A0x299ac96ad8415c23!2sR%C3%ADo%20Loncomilla%2038%2C%20Vi%C3%B1a%20del%20Mar%2C%20Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1699123778502!5m2!1ses-419!2scl" width="800" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
@@ -58,9 +60,9 @@
           <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
           <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
         </a>
-        <a class="boton_footer">
+        <a class="boton_footer" href="tel:983726539">
           <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer" href="#">+56983726539</div>
+          <div class="texto_footer">+56983726539</div>
         </a>
         <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
           <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
