--- a/cotiza tu lista/index.html
+++ b/cotiza tu lista/index.html
@@ -24,11 +24,11 @@
         <li class="dropdown">
             <a class="catalogo-button" href="../catalogo/index.html">Catálogo</a>
             <ul class="sub-menu">
-              <li><a href="#">Cuadernos</a></li>
-              <li><a href="#">Creatividad</a></li>
-              <li><a href="#">Herramientas</a></li>
-              <li><a href="#">Lápices</a></li>
-              <li><a href="#">Papelería</a></li>
+              <li><a href="../catalogo/index.html">Cuadernos</a></li>
+              <li><a href="../catalogo/index.html">Creatividad</a></li>
+              <li><a href="../catalogo/index.html">Herramientas</a></li>
+              <li><a href="../catalogo/index.html">Lápices</a></li>
+              <li><a href="../catalogo/index.html">Papelería</a></li>
             </ul>
         </li>
         <li><a href="../cotiza tu lista/index.html">Cotiza tu lista</a></li>
@@ -51,30 +51,29 @@
       <li>Una vez reciba el aviso de que su pedido está listo, se coordinará el lugar de entrega y fecha de entrega en un punto medio.</li>
       <li>Al momento de la entrega se hace el pago del otro 50% del valor total.</li>
     </ol>
-    <a href="#" class="boton_cotiza">Enviar un mensaje</a>
+    <a href="https://wa.me/983726539" class="boton_cotiza">Enviar un mensaje</a>
 </section>
 <img src="../images/clientes/tiaruth-clienta.png" class="foto_clienta" alt="Fotografía de clienta recibiendo su pedido" width="600px" height="500px">
 </body>
 <span class="pre_footer">.</span>
 <footer>
-  <div class="contacto_footer">
-      <a class="boton_footer" href="https://www.google.com/maps/place/R%C3%ADo+Loncomilla+38,+Vi%C3%B1a+del+Mar,+Valpara%C3%ADso/@-33.0309193,-71.4976202,17z/data=!4m5!3m4!1s0x9689debc6bc8f1e3:0x299ac96ad8415c23!8m2!3d-33.0305955!4d-71.4960967?entry=ttu">
-        <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
-        <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
-      </a>
-      <a class="boton_footer">
-        <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
-        <div class="texto_footer" href="#">+56983726539</div>
-      </a>
-      <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
-        <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
-        <div class="texto_footer">r.gonzalescortes777@gmail.com</div>
-      </a>
-      <a class="boton_footer" href="https://web.facebook.com/LibreriaTiaRuth">
-        <i class="fa-brands fa-facebook fa-2x" style="color: #ffffff;"></i>
-        <div class="texto_footer">Librería Tia Ruth</div>
-      </a>
-  </div>
+    <div class="contacto_footer">
+        <a class="boton_footer" href="https://www.google.com/maps/place/R%C3%ADo+Loncomilla+38,+Vi%C3%B1a+del+Mar,+Valpara%C3%ADso/@-33.0309193,-71.4976202,17z/data=!4m5!3m4!1s0x9689debc6bc8f1e3:0x299ac96ad8415c23!8m2!3d-33.0305955!4d-71.4960967?entry=ttu">
+          <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
+          <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
+        </a>
+        <a class="boton_footer" href="tel:983726539">
+          <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
+          <div class="texto_footer">+56983726539</div>
+        </a>
+        <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
+          <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
+          <div class="texto_footer">r.gonzalescortes777@gmail.com</div>
+        </a>
+        <a class="boton_footer" href="https://web.facebook.com/LibreriaTiaRuth">
+          <i class="fa-brands fa-facebook fa-2x" style="color: #ffffff;"></i>
+          <div class="texto_footer">Librería Tia Ruth</div>
+        </a>
+    </div>
 </footer>
-
 </html>
