--- a/home/index.html
+++ b/home/index.html
@@ -76,11 +76,11 @@
 </section>
 <div class="catalogo_productos">Catálogo de productos</div>
 <div class="catalogo">
-    <a href="#" class="boton_catalogo">Papelería</a>
-    <a href="../creatividad/index.html" class="boton_catalogo">Creatividad</a>
-    <a href="#" class="boton_catalogo">Lápices</a>
-    <a href="#" class="boton_catalogo">Herramientas</a>
-    <a href="#" class="boton_catalogo">Cuadernos</a>
+    <a href="../catalogo/index.html" class="boton_catalogo">Papelería</a>
+    <a href="../catalogo/index.html" class="boton_catalogo">Creatividad</a>
+    <a href="../catalogo/index.html" class="boton_catalogo">Lápices</a>
+    <a href="../catalogo/index.html" class="boton_catalogo">Herramientas</a>
+    <a href="../catalogo/index.html" class="boton_catalogo">Cuadernos</a>
 </div>
 <img class="logo-caligrafia"  src="../images/tiaruth-logo-caligrafia.png" alt="Logo caligrafía Tia Ruth" width="800px" height="350px"></img>
 </body>
@@ -91,9 +91,10 @@
           <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
           <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
         </a>
-        <a class="boton_footer">
+        <a class="boton_footer" href="tel:983726539">
           <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer" href="#">+56983726539</div>
+          <div class="texto_footer">+56983726539</div>
+        
         </a>
         <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
           <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
