--- a/producto/index.html
+++ b/producto/index.html
@@ -47,10 +47,10 @@
             <span style="text-decoration: line-through;">$2500</span><span>/$2000</span>
         </div>
     </section>
-    <section class="comprar">
-        <a href="#" class="boton_comprar">Comprar</a>
+    <div class="comprar">
         <span class="boton_cantidad"><a class="masmenos">-</a><a class="numero">1</a><a class="masmenos">+</a></span>
-    </section>
+        <button href="#" class="boton_comprar">Comprar</button>
+    </div>
     <section class="descripcion_producto">
         <h2>Descripción</h2>
         <p>Caja de témperas 12 frascos de 15 cc<br> Artículo escolar ideal para la enseñanza de las artes plásticas. <br>Se recomienda la supervición de un adulto.</p>
@@ -64,9 +64,9 @@
           <i class="fa-solid fa-house fa-2x" style="color: #ffffff;"></i>
           <div class="texto_footer">Río Loncomilla 38, Viña del mar</div>
         </a>
-        <a class="boton_footer">
+        <a class="boton_footer" href="tel:983726539">
           <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
-          <div class="texto_footer" href="#">+56983726539</div>
+          <div class="texto_footer">+56983726539</div>
         </a>
         <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
           <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
@@ -78,3 +78,4 @@
         </a>
     </div>
 </footer>
+</html>
