--- a/home/index.html
+++ b/home/index.html
@@ -37,7 +37,7 @@
 <body>
 <section class="presentacion">
     <h1 class="titulos">Hola! Soy la tía Ruth</h1>
-    <h2>Encuentra aquí los articulos de librería que buscas, y si no lo encuentras contáctame y lo buscaré por ti.</h2>
+    <h2>Encuentra aquí los articulos de librería que buscas, si no lo encuentras contáctame y lo buscaré por ti.</h2>
     <p class="Ofertas">Ofertas para ti</p>
 </section>
 <section>
@@ -94,7 +94,6 @@
         <a class="boton_footer" href="tel:983726539">
           <i class="fa-solid fa-phone fa-2x" style="color: #ffffff;"></i>
           <div class="texto_footer">+56983726539</div>
-        
         </a>
         <a class="boton_footer" href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQfjdjCFrNvZpkgcRbtZKXLrGFGjDhHMPwJlTCBGxdMrwVRHWncfGHhzCcQBFwZBDjlSF">
           <i class="fa-solid fa-envelope fa-2x" style="color: #ffffff;"></i>
